--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="1"
-      android:versionName="1.0" package="com.sonyericsson.tutorial.zoom4">
+      android:versionName="1.0" package="com.sonyericsson.demo">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".TutorialZoomActivity4"
+        <activity android:name=".Demo"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
