--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      android:versionName="1.0" package="com.sonyericsson.demo">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Demo"
-                  android:label="@string/app_name">
+    package="com.sonyericsson.demo"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <application
+        android:hardwareAccelerated="false"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:largeHeap="true" >
+        <activity
+            android:name=".Demo"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
+
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-sdk android:minSdkVersion="4" />
 
-</manifest> 
+</manifest>
